--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "travel_month # \"January\"\n",
-    "tra"
+    "travel_month = \"January"
    ]
   },
   {
