--- a/index.ipynb
+++ b/index.ipynb
@@ -88,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks = None"
@@ -104,7 +102,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks # 3\n",
+    "number_of_we"
    ]
   },
   {
