--- a/index.ipynb
+++ b/index.ipynb
@@ -97,13 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks # 3\n",
-    "number_of_we"
+    "number_of_weeks = 3"
    ]
   },
   {
